Trying to upload an image
Added an image with better dimensions

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>My test page</title>
   </head>
   <body>
-    <img src ="images/IMG_4226.jpeg">
+    <img src ="images/IMG_1.jpeg" width ="100" height = "50">
   </body>
 </html>
