Still working on the CSS
The CSS still needs some work

--- a/lab_6/index.html
+++ b/lab_6/index.html
@@ -21,17 +21,14 @@
                <label for="Interests">Interests</label>
              </li>
              <li>
-               <input type="text" id="Intersets" name="user_email" />
+              <textarea id="Interests" rows="5" cols="33"></textarea>
              </li>
              <li class="button">
               <button type="submit">Submit</button>
             </li>
           </ul>
           </form>
-    
-             
-
-        </div>
+         </div>
       </div>
     </div>
   </body>
