--- a/lab_6/index.html
+++ b/lab_6/index.html
@@ -14,7 +14,7 @@
                <label for="name">Name</label>
              </li>
              <li>
-               <input type="text" id="name" name="user_name" maxlength="140">
+               <input type="text" id="name" maxlength="140">
              </li>
              <li>
                <label for="Interests">Interests</label>
@@ -28,6 +28,7 @@
           </ul>
           </form>
          </div>
+         
       
   </body>
 </html>
