Still trying to complete lab 9
Stll trying to make lab 8 work within lab 9 but just submitted  in case I can't finish it on time

--- a/lab_9/public/index.html
+++ b/lab_9/public/index.html
@@ -18,8 +18,38 @@
     fetch('/api') // Rather than fetching from PG County, we're going to fetch from our own server.
       .then(res => res.json())
       .then(res => {
+        const chart = new CanvasJS.Chart("chartContainer", {
+	theme: "dark2",
+	exportFileName: "Doughnut Chart",
+	exportEnabled: true,
+	animationEnabled: true,
+	title:{
+		text: "Percentage Distribution Of Different Categories Of Food Serving Establishments"
+	},
+	legend:{
+		cursor: "pointer",
+		itemclick: explodePie
+	},
+	data: [{
+		type: "doughnut",
+		innerRadius: 75,
+		showInLegend: true,
+		toolTipContent: "<b>{name}</b>: {y} (#percent%)",
+		indexLabel: "{name} - #percent%",
+		dataPoints: results,
+	}]
+});
+chart.render();
+
+ function explodePie (e) {
+	if(typeof (e.dataSeries.dataPoints[e.dataPointIndex].exploded) === "undefined" || !e.dataSeries.dataPoints[e.dataPointIndex].exploded) {
+		e.dataSeries.dataPoints[e.dataPointIndex].exploded = true;
+	} else {
+		e.dataSeries.dataPoints[e.dataPointIndex].exploded = false;
+	}
+	e.chart.render();
         // Here's where your chart code should go.
-      })
+      });
   </script>
 </body>
 
