Trying to figure everything out

--- a/lab_7/index.html
+++ b/lab_7/index.html
@@ -63,6 +63,51 @@
 
     <script>
 
+// Code for extracting the different coordinates for the map 
+
+fetch(' https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json ')
+      .then((response) => {
+        console.log("response information", response);
+        return response;
+      })
+      .then((data) => data.json())
+      .then((data) => { 
+          console.log(data);
+          const clearEmptyData = data.filter((f) => f.geocoded_column_1);
+          const filtered = clearEmptyData.map((m) => ({
+            coordinate: m.geocoded_column_1.coordinates,
+            
+          }));
+          return filtered; 
+        })
+        .then((data) =>{
+          return data.reduce((collection,current) =>{
+            current.category;
+            if(!collection[current.category]){
+              collection[current.category] = [];
+            } else{
+              collection[current.category].push(current);
+            }
+            return collection;
+          }, {});  
+        })
+        .then((data) => {
+          console.log('new data', data);
+          const reformattedData = Object.entries (data).map((m,i)=>{
+            console.log('to see m',m);
+            
+          });
+
+          return reformattedData;
+        })
+
+
+ // for(const i = 0; )
+
+
+
+
+
 var mymap = L.map('mapid').setView([38.986079, -76.944927], 13);
 
 L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
